--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+before_script:
+  - composer self-update -q
+  - if [ -n "$GH_TOKEN" ]; then composer config github-oauth.github.com ${GH_TOKEN}; fi;
 language: java
 sudo: false
 script: mvn install
