--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ deploy:
   provider: releases
   skip_cleanup: true
   api_key: $GH_TOKEN
-  file: "/home/travis/.m2/repository/ch/bbw/je/ConsoleCalculator/0.0.1-SNAPSHOT/ConsoleCalculator-0.0.1-SNAPSHOT.jar"
+  file: "/home/travis/.m2/repository/ch/bbw/je/ConsoleCalculator/1.0.0/ConsoleCalculator-1.0.0.jar"
   on:
     repo: Nexterbyby/ConsoleCalculator
+    tags: true
